err/damn-simple-jsonrpc-server-django.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/damn_simple_jsonrpc_server-0.4.2.egg-info'...
Listing './lib/python3.5/site-packages/damn_simple_jsonrpc_server_django-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/jsonrpcdjango'...
Compiling './lib/python3.5/site-packages/jsonrpcdjango/loader.py'...
***   File "./lib/python3.5/site-packages/jsonrpcdjango/loader.py", line 13
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jsonrpcdjango/management'...
Listing './lib/python3.5/site-packages/jsonrpcdjango/management/commands'...
Listing './lib/python3.5/site-packages/jsonrpcdjango/templates'...
Listing './lib/python3.5/site-packages/jsonrpcdjango/templates/jsonrpc'...
Listing './lib/python3.5/site-packages/jsonrpcserver'...
Compiling './lib/python3.5/site-packages/jsonrpcserver/__init__.py'...
***   File "./lib/python3.5/site-packages/jsonrpcserver/__init__.py", line 138
    except (TypeError, ValueError), ex:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
